fix: warning eroros and dcso